# job-dispatcher

./: .buildinfo  .gitignore  README.md  content.html  genindex.html  intro.html  main_page.html  markdown.html  meta.yaml  meta.yaml~  notebooks.html  objects.inv  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml
docs/: _config.yml  _toc.yml  contributors-guide.md  getting-started.md  intro.md  my_extension.py  requirements-doc.txt
docs/API/: processor.md
docs/user-guide/: intro.md  job-definition.md  job-running.md  job-scheduling.md
jobdispatcher/: __init__.py  engines.py  index_based_loops.py  job_balancers.py  jobdispatcher.py  jobs.py  processor.py
jobdispatcher/packing/: chunker.py  to_constant_volume.py
tests/: test_loops.py
