[metadata]
name = job-dispatcher

[options]
packages =
    job-dispatcher
    job-dispatcher.packing

python_requires = >=3.8
package_dir = =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    numpy

[flake8]
max-line-length = 100